// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SalesMetrics component Renders the SalesMetrics with isGraphView false 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#f5f5f5",
      "borderBottomWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 12,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={20}
      onPress={[Function]}
      radius={50}
      style={
        Object {
          "marginRight": 4,
        }
      }
      testID="dailyViewBtn"
      title="[missing \\"en.GENERICS.DAILY\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={12}
      titleFontWeight="bold"
      type={1}
      width={72}
    />
    <Button
      backgroundColor="#eeeeee"
      disabled={false}
      height={20}
      onPress={[Function]}
      radius={50}
      style={
        Object {
          "marginLeft": 4,
        }
      }
      testID="weeklyViewBtn"
      title="[missing \\"en.GENERICS.WEEKLY\\" translation]"
      titleColor="#0071e9"
      titleFontSize={12}
      titleFontWeight="bold"
      type={1}
      width={72}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 12,
        "padding": 8,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 32,
        }
      }
    >
      0
    </Text>
    <Text
      style={
        Object {
          "color": "#757575",
          "fontSize": 12,
        }
      }
    >
      [missing "en.GENERICS.DAILY" translation] [missing "en.ITEM.AVG_SALES" translation]
    </Text>
  </View>
  <ItemDetailsList
    indentAfterFirstRow={false}
    rows={
      Array [
        Object {
          "label": "周二, 1月 24",
          "value": 0,
        },
        Object {
          "label": "周一, 1月 23",
          "value": 0,
        },
        Object {
          "label": "周日, 1月 22",
          "value": 0,
        },
        Object {
          "label": "周六, 1月 21",
          "value": 0,
        },
        Object {
          "label": "周五, 1月 20",
          "value": 0,
        },
        Object {
          "label": "周四, 1月 19",
          "value": 0,
        },
        Object {
          "label": "周三, 1月 18",
          "value": 0,
        },
      ]
    }
  />
</View>
`;

exports[`SalesMetrics component Renders the SalesMetrics with isGraphView false and weekly view 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#f5f5f5",
      "borderBottomWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 12,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 20,
            "width": 72,
          },
          Object {
            "marginRight": 4,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#eeeeee",
              "borderRadius": 50,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="dailyViewBtn"
        >
          <Text
            style={
              Object {
                "color": "#0071e9",
                "fontFamily": "Roboto-Medium",
                "fontSize": 12,
                "fontWeight": "bold",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.GENERICS.DAILY" translation]
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "height": 20,
            "width": 72,
          },
          Object {
            "marginLeft": 4,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0071e9",
              "borderRadius": 50,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="weeklyViewBtn"
        >
          <Text
            style={
              Object {
                "color": "#ffffffff",
                "fontFamily": "Roboto-Medium",
                "fontSize": 12,
                "fontWeight": "bold",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.GENERICS.WEEKLY" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 12,
        "padding": 8,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 32,
        }
      }
    >
      0
    </Text>
    <Text
      style={
        Object {
          "color": "#757575",
          "fontSize": 12,
        }
      }
    >
      [missing "en.ITEM.WEEKLY_AVG_SALES" translation]
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderTopColor": "#e0e0e0",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 10,
            "paddingVertical": 12,
          },
          Object {
            "borderTopWidth": 0,
          },
          false,
        ]
      }
    >
      <Text>
        [missing "en.GENERICS.WEEK" translation] 51
      </Text>
      <Text>
        5
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "borderTopColor": "#e0e0e0",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 10,
            "paddingVertical": 12,
          },
          Object {
            "borderTopWidth": 1,
          },
          false,
        ]
      }
    >
      <Text>
        [missing "en.GENERICS.WEEK" translation] 50
      </Text>
      <Text>
        3
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "borderTopColor": "#e0e0e0",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 10,
            "paddingVertical": 12,
          },
          Object {
            "borderTopWidth": 1,
          },
          false,
        ]
      }
    >
      <Text>
        [missing "en.GENERICS.WEEK" translation] 49
      </Text>
      <Text>
        2
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "borderTopColor": "#e0e0e0",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 10,
            "paddingVertical": 12,
          },
          Object {
            "borderTopWidth": 1,
          },
          false,
        ]
      }
    >
      <Text>
        [missing "en.GENERICS.WEEK" translation] 48
      </Text>
      <Text>
        0
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "borderTopColor": "#e0e0e0",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 10,
            "paddingVertical": 12,
          },
          Object {
            "borderTopWidth": 1,
          },
          false,
        ]
      }
    >
      <Text>
        [missing "en.GENERICS.WEEK" translation] 47
      </Text>
      <Text>
        1
      </Text>
    </View>
  </View>
</View>
`;

exports[`SalesMetrics component Renders the SalesMetrics with isGraphView true 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#f5f5f5",
      "borderBottomWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 12,
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={20}
      onPress={[Function]}
      radius={50}
      style={
        Object {
          "marginRight": 4,
        }
      }
      testID="dailyViewBtn"
      title="[missing \\"en.GENERICS.DAILY\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={12}
      titleFontWeight="bold"
      type={1}
      width={72}
    />
    <Button
      backgroundColor="#eeeeee"
      disabled={false}
      height={20}
      onPress={[Function]}
      radius={50}
      style={
        Object {
          "marginLeft": 4,
        }
      }
      testID="weeklyViewBtn"
      title="[missing \\"en.GENERICS.WEEKLY\\" translation]"
      titleColor="#0071e9"
      titleFontSize={12}
      titleFontWeight="bold"
      type={1}
      width={72}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 12,
        "padding": 8,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 32,
        }
      }
    >
      0
    </Text>
    <Text
      style={
        Object {
          "color": "#757575",
          "fontSize": 12,
        }
      }
    >
      [missing "en.GENERICS.DAILY" translation] [missing "en.ITEM.AVG_SALES" translation]
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 200,
        "paddingVertical": 16,
      }
    }
  >
    <BarChartGate
      contentInset={
        Object {
          "bottom": 10,
          "top": 20,
        }
      }
      data={
        Array [
          Object {
            "label": "2023-01-25T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-24T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-23T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-22T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-21T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-20T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-19T00:00:00.000Z",
            "value": 0,
          },
        ]
      }
      gridMin={0}
      style={
        Object {
          "flex": 1,
        }
      }
      svg={
        Object {
          "fill": "#33691E",
        }
      }
      yAccessor={[Function]}
    >
      <Grid
        belowChart={true}
        direction="HORIZONTAL"
      />
      <Labels />
    </BarChartGate>
    <XAxis
      contentInset={Object {}}
      data={
        Array [
          Object {
            "label": "2023-01-25T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-24T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-23T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-22T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-21T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-20T00:00:00.000Z",
            "value": 0,
          },
          Object {
            "label": "2023-01-19T00:00:00.000Z",
            "value": 0,
          },
        ]
      }
      formatLabel={[Function]}
      scale={[Function]}
      spacingInner={0.05}
      spacingOuter={0.05}
      style={
        Object {
          "marginTop": 10,
        }
      }
      svg={
        Object {
          "fill": "black",
          "fontSize": 10,
        }
      }
      xAccessor={[Function]}
    />
  </View>
</View>
`;

exports[`SalesMetrics component Renders the SalesMetrics with isGraphView true and weekly view 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#f5f5f5",
      "borderBottomWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 12,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 20,
            "width": 72,
          },
          Object {
            "marginRight": 4,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#eeeeee",
              "borderRadius": 50,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="dailyViewBtn"
        >
          <Text
            style={
              Object {
                "color": "#0071e9",
                "fontFamily": "Roboto-Medium",
                "fontSize": 12,
                "fontWeight": "bold",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.GENERICS.DAILY" translation]
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "height": 20,
            "width": 72,
          },
          Object {
            "marginLeft": 4,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0071e9",
              "borderRadius": 50,
              "elevation": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="weeklyViewBtn"
        >
          <Text
            style={
              Object {
                "color": "#ffffffff",
                "fontFamily": "Roboto-Medium",
                "fontSize": 12,
                "fontWeight": "bold",
                "textAlign": undefined,
              }
            }
          >
            [missing "en.GENERICS.WEEKLY" translation]
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 12,
        "padding": 8,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 32,
        }
      }
    >
      0
    </Text>
    <Text
      style={
        Object {
          "color": "#757575",
          "fontSize": 12,
        }
      }
    >
      [missing "en.ITEM.WEEKLY_AVG_SALES" translation]
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 200,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "marginTop": 10,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "fontFamily": undefined,
              "fontSize": 10,
              "fontWeight": undefined,
              "opacity": 0,
            }
          }
        >
          [missing "en.GENERICS.WEEK" translation] 51
        </Text>
      </View>
    </View>
  </View>
</View>
`;
